@@ -1,16 +1,24 @@
-#ifndef MINC_CONFIG_H
-#define MINC_CONFIG_H
+#ifndef __MINC_CONFIG_H__
+#define __MINC_CONFIG_H__
 
-#define MICFG_FORCE_V2 "MINC_FORCE_V2"
-#define MICFG_COMPRESS "MINC_COMPRESS"
-#define MICFG_CHUNKING "MINC_CHUNKING"
-#define MICFG_LOGFILE  "MINC_LOGFILE"
-#define MICFG_LOGLEVEL "MINC_LOGLEVEL"
-#define MICFG_MAXBUF   "MINC_MAX_FILE_BUFFER_KB"
-#define MICFG_MAXMEM   "MINC_MAX_MEMORY_KB"
 
-extern int miget_cfg_bool(const char *);
-extern int miget_cfg_int(const char *);
-extern char * miget_cfg_str(const char *);
+enum MINC_CONFIG { 
+  MICFG_FORCE_V2=0,
+  MICFG_COMPRESS,
+  MICFG_CHUNKING,
+  MICFG_LOGFILE,
+  MICFG_LOGLEVEL,
+  MICFG_MAXBUF,
+  MICFG_MAXMEM,
+  MICFG_MINC_FILE_CACHE,
+  MICFG_MINC_CHECKSUM,
+  MICFG_COUNT
+};
 
-#endif /* MINC_CONFIG_H */
+extern int          miget_cfg_present(int);
+extern int          miget_cfg_bool(int);
+extern int          miget_cfg_int(int);
+extern const char * miget_cfg_str(int);
+extern double miget_cfg_double(int);
+
+#endif /* __MINC_CONFIG_H__ */
