@@ -1872,94 +1872,3 @@ micreate_tempfile(void)
   return (tmpfile_ptr);
 }
 
-/** Simple function to read a user's .mincrc file, if present.
- */
-static int
-miread_cfg(const char *name, char *buffer, int maxlen)
-{
-    FILE *fp;
-    int result = 0;
-    char *home_ptr = getenv("HOME");
-    char path[256];
-
-    if (home_ptr != NULL) {
-      strncpy(path, home_ptr, sizeof(path) - 1);
-    }
-    else {
-      path[0] = '\0';
-    }
-    strcat(path, "/.mincrc");
-    
-    if ((fp = fopen(path, "r")) != NULL) {
-        while (fgets(buffer, maxlen, fp)) {
-            if (buffer[0] == '#') {
-                continue;
-            }
-            if (!strncasecmp(buffer, name, strlen(name))) {
-                char *tmp = strchr(buffer, '=');
-                if (tmp != NULL) {
-                    tmp++;
-                    while (isspace(*tmp)) {
-                        tmp++;
-                    }
-                    strncpy(buffer, tmp, maxlen);
-                    result = 1;
-                    break;
-                }
-            }
-        }
-        fclose(fp);
-    }
-    return (result);
-}
-
-int
-miget_cfg_bool(const char *name)
-{
-    char buffer[128];
-    char *var_ptr;
-
-    if ((var_ptr = getenv(name)) != NULL) {
-        strncpy(buffer, var_ptr, sizeof (buffer) - 1);
-    }
-    else {
-        if (!miread_cfg(name, buffer, sizeof (buffer))) {
-            return (0);
-        }
-    }
-    return (atoi(buffer) != 0);
-}
-
-int
-miget_cfg_int(const char *name)
-{
-    char buffer[128];
-    char *var_ptr;
-    
-    if ((var_ptr = getenv(name)) != NULL) {
-        strncpy(buffer, var_ptr, sizeof (buffer) - 1);
-    }
-    else {
-        if (!miread_cfg(name, buffer, sizeof(buffer))) {
-            return (0);
-        }
-    }
-    return (ParseLong(buffer, NULL));
-}
-
-char *
-miget_cfg_str(const char *name)
-{
-    char buffer[256];
-    char *var_ptr;
-
-    if ((var_ptr = getenv(name)) != NULL) {
-        strncpy(buffer, var_ptr, sizeof(buffer) - 1);
-    }
-    else {
-        if (!miread_cfg(name, buffer, sizeof(buffer))) {
-            return (NULL);
-        }
-    }
-    return (strdup(buffer));
-}
