@@ -418,13 +418,13 @@ image dimensions */
 #define MI2_LOG_SYS_ERROR1(p1) MI2_log_sys_error1(p1)
 #define MI2_CHK_ERR(expr) {if ((expr)<0) MI2_RETURN_ERROR(MI_ERROR);}
 
-#define MICFG_FORCE_V2 "MINC_FORCE_V2"
+/*#define MICFG_FORCE_V2 "MINC_FORCE_V2"
 #define MICFG_COMPRESS "MINC_COMPRESS"
 #define MICFG_CHUNKING "MINC_CHUNKING"
 #define MICFG_LOGFILE  "MINC_LOGFILE"
 #define MICFG_LOGLEVEL "MINC_LOGLEVEL"
 #define MICFG_MAXBUF   "MINC_MAX_FILE_BUFFER_KB"
-#define MICFG_MAXMEM   "MINC_MAX_MEMORY_KB"
+#define MICFG_MAXMEM   "MINC_MAX_MEMORY_KB"*/
 
 
 /* DUMMY rootvariable ID */
